[gd_scene load_steps=2 format=3 uid="uid://e5b01qy6w2b1"]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_main_menu_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu_script")

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="EssenceLabel" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "Essence: 0"

[node name="StatsLabel" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 520.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Runs: 0 | Extractions: 0 | Best: 0:00"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 64
text = "MEGABONK MOBILE"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "QUIT"
